# mcp-decomposition

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
tests/: conftest.py  test_server.py
