[project]
name = "mcp-decomposition"
version = "0.1.0"
description = "MCP server for decomposing forecasting questions using GPT-5.2 with high reasoning effort"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp>=2.13",
    "openai>=1.58.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"